// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board All Cross 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      X
    </button>
  </div>
</div>
`;

exports[`Storyshots Board All Round 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      ◯
    </button>
  </div>
</div>
`;

exports[`Storyshots Board All Triangle 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      半
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      丁
    </button>
  </div>
</div>
`;

exports[`Storyshots Board Default 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Game Default 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next player: X
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Cross 1`] = `
<button
  className="square"
>
  X
</button>
`;

exports[`Storyshots Square Default 1`] = `
<button
  className="square"
>
  
</button>
`;

exports[`Storyshots Square Round 1`] = `
<button
  className="square"
>
  ◯
</button>
`;

exports[`Storyshots Square Triangle 1`] = `
<button
  className="square"
>
  △
</button>
`;
